syntax = "proto3";

option java_multiple_files = true;
option java_package = "marmot.proto";

import public "marmot.type.proto";

package marmot.proto;


message SerializedProto {
	oneof method {
		ProtoBufSerializedProto proto_buf = 1;
		JavaSerializedProto java = 2;
	}
}
message ProtoBufSerializedProto {
	string proto_class = 1;
	oneof optional_object_class {
		string object_class = 2;
	}
	bytes serialized = 3;
}
message JavaSerializedProto {
	bytes serialized = 2;
}

message GeometryColumnInfoProto {
	string name = 1;
	string srid = 2;
}

message ColumnProto {
	string name = 1;
	marmot.proto.TypeCodeProto type_code = 2;
}
message RecordSchemaProto {
	repeated ColumnProto columns = 1;
}

message GroupKeyValueProto {
	repeated ValueProto value = 1;
}

message MarmotFileWriteOptionsProto {
	bool force = 1;
	oneof optional_compression_codec_name {
		string compression_codec_name = 2;
	}
	oneof optional_block_size {
		int64 block_size = 3;
	}
	oneof optional_metadata {
		PropertiesProto metadata = 4;
	}
}

message SpatialIndexInfoProto {
	string dataset = 1;
	GeometryColumnInfoProto geometry_column = 2;
	EnvelopeProto tile_bounds = 3;
	EnvelopeProto data_bounds = 4;
	int32 cluster_count = 5;
	int64 record_count = 6;
	int64 non_duplicated_record_count = 7;
	string hdfs_path = 8;
	int64 updated_millis = 9;
}

message RecordProto {
	repeated ValueProto column = 1;
}